# opengll

./: .gitignore  .gitmodules  CMakeLists.txt  another_main.cpp  build.sh  clear.cpp  configure.sh  cube  freeglut.pc  launch.sh  main.cpp  run.sh
GREAT_EXAMPLES/: abgr.c  bitfont.c  cube.c
lib/: libGLEW.so.2.1.0
notes/: conspects.md  drafts.md  hw.txt  opengl_notes.md  questions_opengl.md  sachenkov_practise.md  sources.md
objects/: model1.inp  model2.inp  model3.inp
sclad/: CMakeLists copy.txt
src/: abr.cpp  another_main.cpp  clear.cpp  clear1.cpp  main.cpp  montecarlo.c  objects.hpp  other_genius_thing.cpp  other_genius_thing.hpp  structures.hpp  stuff.cpp  stuff.hpp  temp.cpp  temp_lib.cpp  temp_lib.hpp  todolist.md
